# tiny-vllm

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  check.sh  full_test.sh  ncu.sh  nsys.sh  run.sh
python/: reference.py  rms_norm.py  rms_norm_crosscheck.txt  tokenizer.py
src/: cuda_to_hip.h  kernels.cu  kernels.cuh  main.cpp  main.h
